# music-crs-team2

./: .gitignore  INFERENCE.md  LICENSE  PIPELINE.md  README.md  TRAINING.md  pipeline.py  pyproject.toml  run.py  weights_manifest.json
recommender/: __init__.py  config.py  data.py  features.py  fusion.py  ranker.py  recommender.py  sources.py  text.py
reference/: prediction_827190.json
response_gen/: __init__.py  factory.py  gemini.py  gemini_pro.py  gemini_pro_refiner.py  prompts.py  track_facts.py
response_gen/prompts/: personalization_blindbnat.txt  response_generation_blindbnat.txt  roleplay_musicmind.txt
scripts/: download_data.py  download_weights.py  upload_weights.py  verify_inference.py
training/: __init__.py  als.py  base_caches.py  blind_source_cache.py  case_features.py  catboost_ensemble.py  dev_payload.py  folds.py  lgbm_rankers.py  struct_base.py  struct_large.py  text_retriever.py  train_all.py  transfer_weighting.py
