[project]
name = "music-crs-team2s2"
version = "1.0.0"
description = "RecSys Challenge 2026 Music-CRS — team2_s2 inference pipeline (Blind-B → predictions.json)"
requires-python = ">=3.11,<3.12"
dependencies = [
    # recommender (retrieval + ranking)
    "torch>=2.5.1",
    "sentence-transformers>=3.0.0,<4",
    "transformers>=4.46.3,<5",
    "lightgbm>=4.0.0",
    "catboost>=1.2.0",
    "implicit>=0.7.2",
    "bm25s>=0.2.13",
    "datasets>=3.1.0",
    "pyarrow>=15.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "tqdm>=4.66.0",
    # weights download (scripts/download_weights.py)
    "huggingface-hub>=0.26.0",
    # response_gen (Gemini API)
    "google-genai>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["recommender*", "response_gen*", "training*"]

# torch is pulled from the CUDA 12.6 wheel index; the cu126 wheels run fine on
# CPU-only machines too (CUDA is used only when a GPU is present).
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
